# rust-blog

./: Cargo.toml  LICENSE-MIT  README.md  SECURITY.md
posts/my-sixty-seventh-article/: post_frontmatter.toml
src/: lib.rs  main.rs
src/handlers/: home_handler.rs  mod.rs  post_handler.rs
static/css/: index.css
tailwind/: package-lock.json  package.json
templates/: base.html  home.html  post.html
